add zipkin configuration