@@ -1,6 +1,7 @@
 package com.learningspringboot.samah.employees.service.impl;
 
 import com.learningspringboot.samah.employees.dto.ProjectDto;
+import com.learningspringboot.samah.employees.exception.InvalidDataException;
 import com.learningspringboot.samah.employees.exception.ProjectNotFoundException;
 import com.learningspringboot.samah.employees.mapping.ProjectMapper;
 import com.learningspringboot.samah.employees.model.Project;
@@ -9,7 +10,7 @@ import com.learningspringboot.samah.employees.service.ProjectService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class ProjectServiceImpl implements ProjectService {
@@ -17,6 +18,10 @@ public class ProjectServiceImpl implements ProjectService {
 
     @Override
     public ProjectDto addProject(ProjectDto projectDto) {
+        if (projectDto.getProjectName().isBlank() || projectDto.getProjectName() == null)
+            throw new InvalidDataException("Project name can not be null");
+        if (projectDto.getProjectName().length() < 2 || projectDto.getProjectName().length() > 30)
+            throw new InvalidDataException("Project name is not valid");
         Project project = ProjectMapper.dtoToProject(projectDto);
         Project savedProject = projectRepository.save(project);
         return ProjectMapper.projectToDto(savedProject);
@@ -32,23 +37,28 @@ public class ProjectServiceImpl implements ProjectService {
     @Override
     public List<ProjectDto> getAllProjects() {
         List<Project> projects = projectRepository.findAll();
-        return projects.stream().map(ProjectMapper::projectToDto).collect(Collectors.toList());
+        return projects.stream().map(ProjectMapper::projectToDto).toList();
     }
 
     @Override
     public ProjectDto updateProject(Integer id, ProjectDto projectDto) {
         Project existingProject = projectRepository.findById(id)
                 .orElseThrow(() -> new ProjectNotFoundException("Project not found with id: " + id));
-
-        // Update existingProject fields based on the provided projectDto
-        // You may want to add validation and mapping logic here
+        Optional.ofNullable(projectDto.getProjectName()).ifPresent(
+                name -> {
+                    if (projectDto.getProjectName().isBlank() || projectDto.getProjectName() == null)
+                        throw new InvalidDataException("Project name can not be null");
+                    if (projectDto.getProjectName().length() < 2 || projectDto.getProjectName().length() > 30)
+                        throw new InvalidDataException("Project name is not valid");
+                }
+        );
 
         Project updatedProject = projectRepository.save(existingProject);
         return ProjectMapper.projectToDto(updatedProject);
     }
 
     @Override
-    public void deleteProjectById(Integer id) {
+    public void deleteProject(Integer id) {
         if (projectRepository.existsById(id)) {
             projectRepository.deleteById(id);
         } else {
